@@ -1,3 +1,7 @@
+2018-03-07  Carl Hetherington  <cth@carlh.net>
+
+	* Fix bad DCPs when re-making in encrypted projects (#1232).
+
 2018-03-02  Carl Hetherington  <cth@carlh.net>
 
 	* Fix bad Prores exports in some cases (#1227).
